# Coding-Plan-Monitoring-System

./: .gitignore  LICENSE  README.md  README_CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: SOLO挑战赛帖子.md
docs/superpowers/specs/: 2026-04-24-ai-api-monitor-design.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/i18n/: locales.ts
src/stores/: monitorStore.ts
src/types/: account.ts
src/utils/: crypto.ts
