[package]
name = "coding-plan-monitoring-system"
version = "1.0.0"
description = "Coding Plan Monitoring System - Real-time multi-provider API usage monitoring"
authors = ["creditai"]
edition = "2021"

[lib]
name = "cpms_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
