[package]
name = "coding-plan-monitoring-system"
version = "1.0.0"
description = "Coding Plan Monitoring System - Real-time multi-provider API usage monitoring"
authors = ["creditai"]
edition = "2021"

[lib]
name = "cpms_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
hostname = "0.4"
whoami = "1"
